# mysqlclient-sys

./: .gitmodules  build.rs
.github/workflows/: ci.yml
mysqlclient-src/: Cargo.toml  build.rs
src/: lib.rs
