[package]
name = "mysqlclient-src"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
link-cplusplus = "1.0"
openssl-sys = { version = "0.9.93", features = ["vendored"] }
openssl-src = "300.0.0"
